<resources>
    <string name="app_name">SENDeros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_button_iniciarSesion">Iniciar sesión</string>
    <string name="text_button_registrarse">Registrarse</string>
    <string name="hint_searchView">¿Incidentes cercanos?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="general_text">General</string>
    <string name="map_text">Visualización del mapa</string>
    <string name="warning_text">Reportes de Avisos</string>
    <string name="account_text">Cuenta</string>
    <string name="app_text">Aplicacion</string>
    <string name="senderos_text">SENDeros © 2023</string>
    <string name="historial_de_accidentes_activos">Historial de accidentes activos</string>
    <string name="clasificacion_de_contribuidores">Clasificacion de contribuidores</string>
    <string name="mapSetting_text">Refrescar Mi Mapa</string>
    <string name="languaje_text">Idioma</string>
    <string name="DarkMode">Modo Oscuro</string>
    <string name="ModeState">Desactivado</string>
    <string name="Welcome_Text">¡Bienvenido de nuevo! ¡Estamos emocionados de que estés aquí de nuevo en nuestra aplicación!</string>
    <string name="userName">Nombre de Usuario</string>
    <string name="passwordText">Contraseña</string>
    <string name="forgotPassword">Olvidaste Contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="InvitationText">¿Aun no posees cuenta en SENDeros App?</string>
    <string name="register">Registrate</string>
    <string name="map_id">45703342c84daa68</string>
    <string name="actualiza_el_mapa">Actualiza el mapa</string>
    <string name="without_ligth">Sin luz</string>
    <string name="without_water">Sin agua</string>
    <string name="fire">Incendio</string>
    <string name="leak_water">Fuga\nde agua</string>
    <string name="manhole_coverlees">Alcantarilla\nsin tapa</string>
    <string name="damaged_walkaway">Pasarela\ndañada</string>
    <string name="fallen_tree">Árbol\ncaído</string>
    <string name="bump">Bache</string>
    <string name="crash">Choque</string>
    <string name="small_letters">Los reportes son publicos. Se mostrará \ntu nombre de usuario junto a la advertencia</string>
    <string name="division_bronze">Division bronce</string>
    <string name="division_bronze_description">los primeros 5 avanzan a la siguiente división</string>
    <string name="division_oro">Division oro</string>
    <string name="division_oro_description">los primeros 5 avanzan a la siguiente división</string>
    <string name="division_rubi">Division rubi</string>
    <string name="division_rubi_description">¡Felicidades por llegar a la última liga! !Sigue adelante, y mantente entre los mejores caminantes!"</string>
    <string name="px">px</string>
    <string name="climb_indicator">Flechas que indican ascenso</string>
    <string name="division">Division de pertenencia</string>
    <string name="descubre_atraves_de_senderos">Descubre nuevos caminos y conecta con el mundo a traves de SENDeros</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo electronico</string>
    <string name="phone">Numero de telefono</string>
    <string name="confirmar">Confirmar</string>
    <string name="ya_posees_una_cuenta_en_senderos">¿Ya posees una cuenta en SENDeros?</string>
    <string name="crea_un_usuario">Crea un usuario para identificarte con SENDeros</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="posees_una_cuenta">¿Ya posees una cuenta en SENDeros?</string>
    <string name="quienContieneError">quienContieneError</string>
    <string name="errormessage">errorMessage</string>
    <string name="completa_campo">Por favor, completa este campo</string>
    <string name="contraseno_coinciden">Las contraseñas no coinciden</string>
    <string name="error_conectarse_servidor">Error al conectarse al servidor ...</string>
    <string name="error_has_occurred">Error has occurred</string>
    <string name="email_ya_registrado">"email ya registrado "</string>
    <string name="usuario_ya_registrado">"Usuario ya registrado "</string>
    <string name="telefonico_ya_registrado">telefonico ya registrado</string>
    <string name="add_photo">Agregar foto</string>
    <string name="send">Enviar</string>
    <string name="add_comment">Agregar\ncomentario</string>
    <string name="add_photoDescrip">Add_Photo</string>
    <string name="comment">Comentario:</string>
    <string name="user">Usuario</string>
    <string name="leak">Fuga de agua</string>
    <string name="add_photo_descrp">Add_Photo</string>
    <string name="warning_">ADVERTENCIA</string>
    <string name="warningText">Para que un usuario pueda colocar una advertencia es necesario registrarse o iniciar sesion para una mejor experiencia</string>

</resources>