<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_dialog_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            tools:layout_editor_absoluteY="92dp" />

        <TextView
            android:id="@+id/name_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/regular_istok"
            android:gravity="center"
            android:text="@string/without_ligth"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                app:srcCompat="@drawable/camera_up"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_photoDescrip"
                android:fontFamily="@font/regular_istok"
                android:gravity="center"
                android:text="@string/add_photo"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                app:srcCompat="@drawable/message_plus"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_photo_descrp"
                android:fontFamily="@font/regular_istok"
                android:gravity="center"
                android:text="@string/add_comment"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/send_alert"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/send"
        android:layout_marginTop="20dp"/>


</LinearLayout>