<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/big_padding_32">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/setting_options"
            android:layout_width="62dp"
            android:layout_height="54dp"
            android:padding="@dimen/little_padding_8"
            app:srcCompat="@drawable/setting_icon" />

        <Button
            android:id="@+id/button_iniciarSesion"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/text_button_iniciarSesion" />

        <Button
            android:id="@+id/button_registrarse"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_button_registrarse" />

        <SearchView
            android:id="@+id/search_alert"
            style="@android:style/Widget.Material.Light.SearchView"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="false"
            android:background="@drawable/filterbar"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/hint_searchView" />

    </LinearLayout>
</LinearLayout>