<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bold_istok"
        android:textSize="@dimen/letter_18sp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/black"
        android:text="@string/actualiza_el_mapa"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/without_light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/without_ligth"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/without_ligth"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/water"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/without_water"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/without_water"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fire"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/fire_"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fire"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/leak"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/leak"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/leak_water"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/sewer"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/manhole_coverlees"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/walkaway"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/walkaway"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/damaged_walkaway"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/tree"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fallen_tree"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pothole"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/pothole"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bump"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                app:srcCompat="@drawable/crash_car"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/crash"
                android:fontFamily="@font/regular_istok"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_50dp">

        <TextView
            android:layout_width="@dimen/width_300dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:fontFamily="@font/regular_istok"
            android:textColor="@color/small_letters_color"
            android:text="@string/small_letters" />

    </LinearLayout>

</LinearLayout>