<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_25dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/crash_car" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/leak"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="center"
            android:fontFamily="@font/bold_istok"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user"
            android:gravity="center"
            android:fontFamily="@font/bold_istok"
            android:textColor="@color/small_letters_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/color_ranking_fragment"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_linearLayout_division_20dp"/>

    </LinearLayout>


</LinearLayout>